--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <section>
       <h1>Närmaste och längst bort i Centraleuropa</h1>
       <h2></h2>
-      <h3>Av städerna i databasen ligger <span id=" closest"></span> närmast och <span id="furthest"></span> längst
-        bort</h3>
+      <h3>Av städerna i databasen ligger <span id="closest"></span> närmast och <span id="furthest"></span> längst
+        bort
+        </h3>
         <div id="cities"></div>
     </section>
     <section>
