--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <main>
     <section id="links">
       <a href="http://webshare.mah.se/aq2531">Länk till sidan på webben</a>
-      <a href="https://github.com/EllenRichterJ/DDU2-U1-2"">Länk till Github repo</a>
+      <a href="https://github.com/EllenRichterJ/DDU2-U1-2">Länk till Github repo</a>
     </section>
     <section>
       <h1>Närmaste och längst bort i Centraleuropa</h1>
       <h2></h2>
       <h3>Av städerna i databasen ligger <span id="closest"></span> närmast och <span id="furthest"></span> längst
         bort
-        </h3>
-        <div id="cities"></div>
+      </h3>
+      <div id="cities"></div>
     </section>
     <section>
       <h1>Distanser (i mil)</h1>
